@@ -1,3 +1,15 @@
+2012-08-16  James Robinson  <jamesr@chromium.org>
+
+        [chromium] Remove alwaysReserveTextures code - it doesn't do anything
+        https://bugs.webkit.org/show_bug.cgi?id=94183
+
+        Reviewed by Dimitri Glazkov.
+
+        Remove deprecated setAlwaysReserveTextures() call from WebLayer.
+
+        * chromium/public/WebLayer.h:
+        (WebLayer):
+
 2012-08-14  Gregg Tavares  <gman@google.com>
 
         Plumb through EXT_debug_marker entry points
